test/bad/type_missmatch_21.mpp
fun bar():real {
    var x:int;
    begin
        x := 2;
        return x;
    end
};
